<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_monitoring"
        android:icon="@drawable/nav_monitoring"
        android:title="@string/title_monitoring" />

<!--    <item-->
<!--        android:id="@+id/navigation_history"-->
<!--        android:icon="@drawable/ic_home_black_24dp"-->
<!--        android:title="@string/title_history" />-->

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/nav_notifications"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_announcement"
        android:icon="@drawable/nav_announcement"
        android:title="@string/title_announcement" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        android:title="@string/title_account" />

</menu>
