<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BeginLoginActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/frameLayout_mobile_verify">


        <LinearLayout
            android:id="@+id/view_begin_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="visible"
            android:weightSum="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:text="@string/account_login"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:hint="@string/account_login"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="@dimen/std_margin"
                android:layout_marginLeft="0dp"
                android:text="@string/password_login"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="@dimen/std_margin"
                android:layout_marginLeft="0dp"
                android:hint="@string/password_login"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_begin_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:layout_marginBottom="@dimen/std_margin"
                android:layout_marginLeft="0dp"
                android:background="@android:color/holo_orange_light"
                android:textColor="@android:color/black"
                android:text="@string/btn_begin_login" />

        </LinearLayout>

    </FrameLayout>
</FrameLayout>